Compound logs and bar charts